# react-native-devtools-frontend

./: .gitignore  package.json
extension-api/: ExtensionAPIReactNative.d.ts  extension-api-tsconfig.json
front_end/: entrypoint_template.html  extensionsConfig.example.js
front_end/core/common/: SettingRegistration.ts  Settings.ts
front_end/core/i18n/: i18nImpl.ts
front_end/core/root/: Runtime.ts
front_end/core/sdk/: IOModel.ts  sdk-meta.ts
front_end/entrypoints/inspector_main/: inspector_main-meta.ts
front_end/entrypoints/main/: BUILD.gn  MainImpl.ts  main-meta.ts
front_end/entrypoints/rn_fusebox/: BUILD.gn  FuseboxFeatureObserver.ts  RNExtensionRegistration.ts  rn_fusebox.ts
front_end/global_typings/: react_native.d.ts
front_end/models/live-metrics/: LiveMetrics.ts
front_end/models/react_native/: ReactDevToolsBindingsModel.ts
front_end/models/trace/handlers/: NetworkRequestsHandler.ts
front_end/panels/coverage/: BUILD.gn  coverage-meta.ts
front_end/panels/emulation/: DeviceModeWrapper.ts  emulation-meta.ts
front_end/panels/mobile_throttling/: BUILD.gn  mobile_throttling-meta.ts
front_end/panels/timeline/: BUILD.gn  RNTraceModificationsManager.ts  TimelineFlameChartView.ts  TimelinePanel.ts
front_end/ui/legacy/components/perf_ui/: perf_ui-meta.ts
scripts/eslint_rules/lib/: check-license-header.js
