# Copyright (c) Meta Platforms, Inc. and affiliates.
# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../visibility.gni")

devtools_module("rn_fusebox") {
  sources = [
    "FuseboxAppMetadataObserver.ts",
    "FuseboxReconnectDeviceButton.ts",
    "FuseboxFeatureObserver.ts",
    "FuseboxWindowTitleManager.ts",
    "RNExtensionRegistration.ts",
  ]

  deps = [
    "../../core/common:bundle",
    "../../core/host:bundle",
    "../../core/i18n:bundle",
    "../../core/root:bundle",
    "../../core/sdk:bundle",
    "../../ui/legacy:bundle",
  ]
}

devtools_entrypoint("entrypoint") {
  entrypoint = "rn_fusebox.ts"

  deps = [
    "../../core/rn_experiments:bundle",
    "../../entrypoints/inspector_main:meta",
    "../../panels/accessibility:meta",
    "../../panels/animation:meta",
    "../../panels/application:meta",
    "../../panels/browser_debugger:meta",
    "../../panels/css_overview:meta",
    "../../panels/developer_resources:meta",
    "../../panels/elements:meta",
    "../../panels/emulation:meta",
    "../../panels/issues:meta",
    "../../panels/layer_viewer:meta",
    "../../panels/layers:meta",
    "../../panels/lighthouse:meta",
    "../../panels/media:meta",
    "../../panels/mobile_throttling:meta",
    "../../panels/network:meta",
    "../../panels/performance_monitor:meta",
    "../../panels/recorder:meta",
    "../../panels/react_devtools:components_meta",
    "../../panels/react_devtools:profiler_meta",
    "../../panels/rn_welcome:meta",
    "../../panels/security:meta",
    "../../panels/sensors:meta",
    "../../panels/timeline:meta",
    "../../panels/web_audio:meta",
    "../../panels/webauthn:meta",
    "../main:bundle",
    "../shell",
    ":rn_fusebox",
  ]

  visibility = [ "../../:*" ]

  visibility += devtools_entrypoints_visibility
}
